Fixed issue with contactPage overlapping; container resizing; state for selected page

--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@ img {
 }
 
 .large-container {
-  max-width: 1440px;
+  /* max-width: 1440px; */
   padding: 0 1.2rem;
   margin: 0 auto;
 }
@@ -60,6 +60,7 @@ h4,
 h5,
 h6 {
   font-weight: 900;
+  font-weight: bold;
 }
 
 h1 {
